--- a/style/container.css
+++ b/style/container.css
@@ -9,6 +9,11 @@
     background-color: aliceblue;
 }
 
+.logo {
+    width: 100px;
+    height: 100px;
+}
+
 .headerContainer {
     display: flex;
     justify-content: space-between;
@@ -20,8 +25,7 @@
 .headerLogo {
     background-color: #00ced1;
     background-size: cover;
-    width: 100px;
-    height: 100px;
+    border-radius: 10%;
 }
 
 .headerMenu {
@@ -35,13 +39,29 @@
     margin: 10px 30px 10px 30px;
     border: none;
     outline: none;
-    background-color: #00ced1;
+    background: linear-gradient(#e66465, #87b8b8);
     border-radius: 16px;
     width: 100px;
+    -webkit-transition: 2s;
+    transition: 2s;
+}
+
+.menuBtn:hover {
+    background: linear-gradient( #87b8b8, #e66465);
+    transform: rotate(90deg);
+}
+
+.menuBtn:nth-of-type(2):hover {
+    background: linear-gradient( #87b8b8, #e66465);
+    transform: rotate(-90deg);
 }
 
 .menuBtn:active {
-    background-color: #afeeee;
+    background: linear-gradient(#e66465, #87b8b8);
+}
+
+.menuBtn:nth-of-type(2):active {
+    background: linear-gradient(#e66465, #87b8b8);
 }
 
 .menuBtn:first-child {
@@ -81,7 +101,7 @@
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    flex-direction: row-reverse;
+    flex-direction: row;
     width: 80%;
     margin: 8px;
     border: 4px solid #7b68ee;
@@ -92,6 +112,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    flex-grow: 1;
     width: 20%;
     background-color: #b0e0e6;
     padding: 8px;
@@ -122,20 +143,21 @@
 
 .mainControl {
     display: flex;
-    justify-content: center;
-    align-content: flex-start;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
     width: 20%;
+    height: auto;
+    box-sizing: border-box;
     border: 4px solid #7b68ee;
     margin: 8px;
 }
 
 .controlTabs {
+    /* flex-basis: 100%; */
     margin: 8px;
     padding: 8px;
     background-color: cyan;
     border: 4px solid #7b68ee;
-    width: auto;
 }
 
 .controlInput {
@@ -143,4 +165,67 @@
     border: none;
     width: 100%;
     padding: 0;
+}
+
+.containerFooter {
+    background-color: #cd97e2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.footerLogo {
+    background-color: rgb(88, 161, 119);
+    box-sizing: border-box;
+    border-radius: 10%;
+}
+
+.footerTabs {
+    border: 2px solid rgb(72, 11, 87);
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.tabsText {
+    padding: 5px;
+    margin: 5px;
+}
+
+.footerContact {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    /* margin: 8px;
+    padding: 8px; */
+}
+
+.footerContact a {
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.footerContact a:nth-of-type(1) {
+    background-color: rgb(94, 2, 40);
+}
+
+.footerContact a:nth-of-type(2) {
+    background-color: rgb(155, 0, 72);
+}
+
+.footerContact a:nth-of-type(3) {
+    background-color: rgb(89, 2, 110);
+}
+
+.footerContact a:nth-of-type(4) {
+    background-color: rgb(61, 3, 94);
 }
